data/derived/comb/progs/unify/prog7719.ml.out
Characters 111-125:
  let seen' = if !(List.mem = h) then h::seen else seen' in
                  ^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a ref
